--- a/src/app/feed/feed.module.css
+++ b/src/app/feed/feed.module.css
@@ -4,9 +4,9 @@
   flex-direction: column;
   max-width: 400px;
   height: 60vh;
-  max-height: 900px;
+  max-height: 1000px;
   background: rgb(49 55 60);
-  margin: 20px;
+  margin: 10px;
   border-radius: 5px;
   padding: 20px;
 }
@@ -16,6 +16,11 @@
   flex-direction: row;
   padding: 20px 0px;
   flex-grow: 1;
+}
+
+.title {
+  text-align: center;
+  padding: 20px;
 }
 
 .details {
@@ -33,9 +38,10 @@
   display: flex;
   flex-direction: row;
   gap: 25px;
-  align-items: stretch;
+  align-items: center;
   background: rgb(94 89 97);
   max-height: 1300px;
+  max-width: 100vw;
   height: 65vh;
-  overflow: auto;
+  overflow: scroll;
 }
